# HRI_lab

./: .gitignore  README.md  __init__.py  config.py  dashboard.py  install.sh  install_gpu.sh  pyproject.toml  session.py
dashboard/: __init__.py  __main__.py  server.py
dashboard/static/: index.html
database/: __init__.py  db.py  products.json  shoes.json
database/sessions/: 1777206370.json  1777206534.json  1777206690.json  1777207369.json  1777208149.json  1777208377.json  1777209812.json  1777209880.json  1777212610.json  1777212696.json  1777214627.json  1777214715.json  1777217257.json  1777217556.json  1777217595.json  1777217641.json  1777217717.json  1777217805.json  1777217857.json  1777460958.json  1777461022.json  1777719952.json  1777719984.json  1777720016.json  1777720048.json  1777720080.json  (+47 more)
demos/: menu_demo.py  no_stt_demo.py  sales_assistant_robot.py
docs/: README.md  awareness.md  camera.md  dashboard.md  database.md  human_detection.md  leds.md  movement.md  object_detection.md  posture.md  session.md  stt.md  tablet.md  touch.md  tracker.md  tts.md
interaction/: __init__.py  awareness.py  dialogue.json  dialogue.py  parsers.py  sales_assistant.py  tablet.py  touch.py
models/: catalog.py  product.py  shoe.py
motion/: __init__.py  animation_player.py  leds.py  movement.py  pointing.py  posture.py  tracker.py
speech/: __init__.py  stt.py  tts.py
tablet/: __init__.py  deploy.py  service.py
utils/: __init__.py  device.py  image_utils.py
vision/: __init__.py  camera.py  human_detection.py  marker_finder.py  object_detection.py
(+20 files in other folders)
