[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "HRI-lab-Pepper"
version = "1.0.0"
description = "HRI Lab Pepper robot control framework"
requires-python = ">=3.9"
# Runtime deps are managed by install.sh / install_gpu.sh
dependencies = []

[tool.setuptools]
# Map the HRI_lab_Pepper package to the repo root so the install works
# regardless of what the containing folder is named (e.g. after a zip download).
package-dir = {"HRI_lab_Pepper" = "."}
packages = [
  "HRI_lab_Pepper",
  "HRI_lab_Pepper.dashboard",
  "HRI_lab_Pepper.database",
  "HRI_lab_Pepper.interaction",
  "HRI_lab_Pepper.motion",
  "HRI_lab_Pepper.speech",
  "HRI_lab_Pepper.tablet",
  "HRI_lab_Pepper.utils",
  "HRI_lab_Pepper.vision",
]
